2015-06-16  Alex Christensen  <achristensen@webkit.org>

        [Content Extensions] Implement branch compaction for DFA bytecode.
        https://bugs.webkit.org/show_bug.cgi?id=145619

        Reviewed by Benjamin Poulain.

        * UIProcess/API/APIUserContentExtensionStore.h:
        Increment version number to reflect changes to bytecode.

2015-06-16  Anders Carlsson  <andersca@apple.com>

        WebResourceCacheManager is unused, get rid of it
        https://bugs.webkit.org/show_bug.cgi?id=146027

        Reviewed by Sam Weinig.

        * DerivedSources.make:
        * UIProcess/API/C/WKAPICast.h:
        * UIProcess/API/C/WKContext.cpp:
        * UIProcess/WebProcessPool.cpp:
        * UIProcess/WebResourceCacheManagerProxy.cpp: Removed.
        (WebKit::WebResourceCacheManagerProxy::supplementName): Deleted.
        (WebKit::WebResourceCacheManagerProxy::create): Deleted.
        (WebKit::WebResourceCacheManagerProxy::WebResourceCacheManagerProxy): Deleted.
        (WebKit::WebResourceCacheManagerProxy::~WebResourceCacheManagerProxy): Deleted.
        (WebKit::WebResourceCacheManagerProxy::processPoolDestroyed): Deleted.
        (WebKit::WebResourceCacheManagerProxy::processDidClose): Deleted.
        (WebKit::WebResourceCacheManagerProxy::shouldTerminate): Deleted.
        (WebKit::WebResourceCacheManagerProxy::refWebContextSupplement): Deleted.
        (WebKit::WebResourceCacheManagerProxy::derefWebContextSupplement): Deleted.
        (WebKit::WebResourceCacheManagerProxy::getCacheOrigins): Deleted.
        (WebKit::WebResourceCacheManagerProxy::didGetCacheOrigins): Deleted.
        (WebKit::WebResourceCacheManagerProxy::clearCacheForOrigin): Deleted.
        (WebKit::WebResourceCacheManagerProxy::clearCacheForAllOrigins): Deleted.
        * UIProcess/WebResourceCacheManagerProxy.h: Removed.
        * UIProcess/WebResourceCacheManagerProxy.messages.in: Removed.
        * WebKit2.xcodeproj/project.pbxproj: