@@ -1,5 +1,12 @@
 2015-06-16  Alex Christensen  <achristensen@webkit.org>
 
+        CMake build fix after r185615.
+
+        * CMakeLists.txt:
+        Remove WebResourceCacheManager from CMake build system.
+
+2015-06-16  Alex Christensen  <achristensen@webkit.org>
+
         [Content Extensions] Implement branch compaction for DFA bytecode.
         https://bugs.webkit.org/show_bug.cgi?id=145619
 
